testsuite/tests/grammar/invalid_enum/test.out
== no-dot.lkt ==
no-dot.lkt:4:29: error: Parsers cannot create abstract nodes
4 |     @main_rule main_rule <- Example("example")
  |                             ^^^^^^^^^^^^^^^^^^


== bad-prefix.lkt ==
bad-prefix.lkt:4:29: error: Unknown node: NoSuchNode
4 |     @main_rule main_rule <- NoSuchNode.Example("example")
  |                             ^^^^^^^^^^


== bad-alt.lkt ==
bad-alt.lkt:4:37: error: Unknown enum node alternative: NoSuchAlt
4 |     @main_rule main_rule <- Example.NoSuchAlt("example")
  |                                     ^^^^^^^^^


Done
